Fixed integration tests for render resource renaming.

--- a/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr.ddfeditor/plugin.xml
@@ -432,7 +432,8 @@
             name="Render"
             proto-message-class="com.dynamo.render.proto.Render$RenderPrototypeDesc"
             resource-refactor-participant-class="com.dynamo.cr.ddfeditor.refactoring.RenderRefactorParticipant"
-            template-data="script: &apos;&apos;">
+            template-data="script: &apos;&apos;"
+            type-class="render">
          <references>
             <reference-type-class
                   type-class="render_script">
