--- a/com.dynamo.cr.cgeditor/plugin.xml
+++ b/com.dynamo.cr.cgeditor/plugin.xml
@@ -13,5 +13,20 @@
             id="com.dynamo.cr.cgeditor.CgEditor">
       </editor>
    </extension>
+   <extension
+         point="com.dynamo.cr.resourcetypes">
+      <resource-type
+            file-extension="fp"
+            id="com.dynamo.cr.cgeditor.resourcetype.FragmentProgram"
+            name="Fragment Program"
+            type-class="fp">
+      </resource-type>
+      <resource-type
+            file-extension="vp"
+            id="com.dynamo.cr.cgeditor.resourcetype.VertexProgram"
+            name="Vertex Program"
+            type-class="vp">
+      </resource-type>
+   </extension>
 
 </plugin>
