Added cg editor to the parent-project.

--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -85,6 +85,7 @@
         <module>../com.dynamo.cr.contenteditor</module>
         <module>../com.dynamo.cr.contenteditor.test</module>
         <module>../com.dynamo.cr.luaeditor</module>
+        <module>../com.dynamo.cr.cgeditor</module>
         <module>../com.dynamo.cr.ddfeditor</module>
         <module>../com.dynamo.cr.ddfeditor.test</module>
         <module>../com.dynamo.cr.protobind</module>
